deploy apps with ssl/kube-manifests/04-IngressService[ssl]/Ingress-DomainName-Based-Routing-app1-2-3[ssl].yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1-app2-app3
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: app1.inovasys-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: app2.inovasys-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80
    - host: app3.inovasys-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usermgmt-webapp-clusterip-service
                port: 
                  number: 80                                                              
  tls:
  - hosts:
    - app1.inovasys-lab.com
    secretName: app1-inovasys-secret           
  - hosts:
    - app2.inovasys-lab.com
    secretName: app2-inovasys-secret  
  - hosts:
    - app3.inovasys-lab.com
    secretName: app3-inovasys-secret
